--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "antdwanke",
-  "version": "3.6.4",
+  "name": "components",
+  "version": "0.1.1",
   "title": "Ant Design",
   "description": "An enterprise-class UI design language and React-based implementation",
   "homepage": "http://ant.design/",
@@ -18,7 +18,7 @@
   "contributors": [
     "ant"
   ],
-  "repository": {
+  "repository-liumm": {
     "type": "git",
     "url": "https://github.com/ant-design/ant-design"
   },
@@ -41,6 +41,7 @@
   "dependencies": {
     "antd": "^3.17.0",
     "array-tree-filter": "^2.0.0",
+    "axios": "^0.18.0",
     "babel-runtime": "6.x",
     "classnames": "~2.2.0",
     "create-react-class": "^15.6.0",
@@ -84,7 +85,8 @@
     "react-lazy-load": "^3.0.12",
     "react-slick": "~0.23.1",
     "shallowequal": "^1.0.1",
-    "warning": "~4.0.1"
+    "warning": "~4.0.1",
+    "xlsx": "^0.14.3"
   },
   "devDependencies": {
     "@babel/types": "7.0.0-beta.44",
