--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "components",
+  "name": "componentswanke",
   "version": "0.1.4",
   "title": "Ant Design",
   "description": "An enterprise-class UI design language and React-based implementation",
@@ -39,7 +39,7 @@
     "react-dom": ">=16.0.0"
   },
   "dependencies": {
-    "antd": "^3.17.0",
+    "antd": "^3.18.1",
     "array-tree-filter": "^2.0.0",
     "axios": "^0.18.0",
     "babel-runtime": "6.x",
@@ -149,7 +149,7 @@
     "rc-queue-anim": "^1.4.1",
     "rc-scroll-anim": "^2.2.1",
     "rc-tween-one": "^2.0.1",
-    "react": "^16.3.2",
+    "react": "^16.8.6",
     "react-color": "^2.11.7",
     "react-copy-to-clipboard": "^5.0.0",
     "react-dnd": "^3.0.2",
