--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "componentswanke",
-  "version": "0.1.6",
+  "name": "ems",
+  "version": "1.5.12",
   "title": "Ant Design",
   "description": "An enterprise-class UI design language and React-based implementation",
   "homepage": "http://ant.design/",
@@ -25,8 +25,9 @@
   "bugs": {
     "url": "https://github.com/ant-design/ant-design/issues"
   },
-  "main": "lib/index.js",
-  "module": "es/index.js",
+  "main-liumm": "lib/index.js",
+  "main":"components/index.tsx",
+  "module-liumm": "es/index.js",
   "files": [
     "dist",
     "lib",
@@ -39,7 +40,7 @@
     "react-dom": ">=16.0.0"
   },
   "dependencies": {
-    "antd": "^3.18.1",
+    "antd": "3.16.5",
     "array-tree-filter": "^2.0.0",
     "axios": "^0.18.0",
     "babel-runtime": "6.x",
@@ -50,7 +51,7 @@
     "enquire.js": "^2.1.1",
     "intersperse": "^1.0.0",
     "jquery": "^3.4.1",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.11",
     "moment": "^2.19.3",
     "omit.js": "^1.0.0",
     "prop-types": "^15.5.7",
